2. Converted Siplet Applet in the default web site to an ajax-based http macro.  Damn you browser security for killing my applet!
3. New Fighter skill: Subdue
4. New Command: DUEL -- for safe, healthy, player PVP duels, even on non-pvp or optional pvp systems.
5. Immunities property supports legal immunity now
6. Player corpses are now saved across reboots (if they haven't decayed)
7. Rhino has been upgraded to 1.7R3
# Build 5.7.5 Release 11/05/2011
1. CoffeeMud now supports html emails, after a fashion
2. New command: DIG, for digging holes and putting stuff in them.  Gem Digging now uses GDIG as its command word.
3. You can now manage MOTD/NEWS using LIST NEWS and CREATE/MODIFY NEWS.  New News is now in journal SYSTEM_NEWS
4. New Abjurer spell: Kinetic Bubble
5. First addition to stock raw resource list in forever (dragonscales, white gold, etc..)
6. GMODIFY can now alter room/locale-type objects as well (global room title changes anyone?)
7. MUDGrinder supports editing/deleting multiple rooms using cntrl-click.
8. New Jester skills: Satire, Quick Change, Center of Attention
9. New Oracle Prayers: Divine Guidance, Prophecy, Seekers Prayer, Soul Peering, Lower Law, Omnipresence, Above the Law
10.New Diviner Spells: Solve Maze, Group Status, Detect Weaknesses, Prying Eye, Telepathy, Natural Communion, Arms Length
   Spying Stone, Hear Thoughts, Know Fate, Divining Eye, Spotters Orders, Find Directions, Death Warning
11.Players can now use COMMANDS CLEAR to clear out their personal command queue.
12.Siplet should be back to 100%, or as close as the new tech will allow.
13.New Archon skill: Injure -- for creating instant injuries (useful for testing, or a nasty punishment).
# Build 5.7.6 Release ??/??/2011
1. New coffeemud.ini entries: COMMONCOST, SKILLCOST, LANGCOST.  Old entries, COMMONTRAINCOST, etc.. RETIRED.
2. (Internal) fakedb now supports dup key detection for insert statements, DBUpgrade now more forgiving of dup keys.