@@ -173,6 +173,15 @@ Short(s): \n\r\
 Toggles whether or not you automatically collect any gold from \
 the corpses of vanquished foes.
 	
+AUTOMAP=\
+Command : AUTOMAP\n\r\
+Usage   : AUTOMAP\n\r\
+Example : automap\n\r\
+Short(s): \n\r\
+If this mud supports the feature, then this command toggles whether \
+or not you automatically see a mini-map of your \
+immediate surroundings when you enter a new room.
+   
 AUTOGUARD=\
 Command : AUTOGUARD\n\r\
 Usage   : AUTOGUARD\n\r\
